arreglo de ramas y avances en mi pc no corre